renamde latex files for cv.

--- a/assets/cv/cv.tex
+++ b/assets/cv/cv.tex
@@ -43,6 +43,9 @@
 % 2. Hacky space on the first bullet point on the second column.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%!TEX program = xelatex
+
 \documentclass[]{deedy-resume-openfont}
 \begin{document}
 
@@ -66,7 +69,7 @@
 
 \subsection{Stellenbosch University}
 \descript{PhD in Computer Science}
-\location{Apr 2017 - Present }
+\location{Apr 2017 - Present NOW}
 \sectionsep
 
 \descript{MComm in Mathematical Statistics}
