--- a/assets/cv/cv.tex
+++ b/assets/cv/cv.tex
@@ -69,7 +69,7 @@
 
 \subsection{Stellenbosch University}
 \descript{PhD in Computer Science}
-\location{Apr 2017 - Present NOW}
+\location{Apr 2017 - Present}
 \sectionsep
 
 \descript{MComm in Mathematical Statistics}
@@ -94,8 +94,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links} 
+Website://  \href{https://za.linkedin.com/in/arnupretorius}{\custombold{arnupretorius}} \\
 Github:// \href{https://github.com/arnupretorius}{\custombold{arnupretorius}} \\
 LinkedIn://  \href{https://za.linkedin.com/in/arnupretorius}{\custombold{arnupretorius}} \\
+
 %YouTube://  \href{https://www.youtube.com/user/DeedyDash007}{\custombold{DeedyDash007}} \\
 %Twitter://  \href{https://twitter.com/debarghya_das}{\custombold{@debarghya\_das}} \\
 %Quora://  \href{https://www.quora.com/Debarghya-Das}{\custombold{Debarghya-Das}}
