Fixed broken links in CV

--- a/assets/cv/cv.tex
+++ b/assets/cv/cv.tex
@@ -94,7 +94,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links} 
-Website://  \href{https://za.linkedin.com/in/arnupretorius}{\custombold{arnupretorius}} \\
+Website://  \href{https://arnupretorius.github.io/}{\custombold{arnupretorius}} \\
 Github:// \href{https://github.com/arnupretorius}{\custombold{arnupretorius}} \\
 LinkedIn://  \href{https://za.linkedin.com/in/arnupretorius}{\custombold{arnupretorius}} \\
 
@@ -148,7 +148,7 @@ Scalable Machine Learning
 \section{Projects}
 \sectionsep
  South African crime data visualisation and analysis web app. \href{https://arnupretorius.shinyapps.io/SACrimeDataAnalyserWebApp/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BtTn34xJBSvmObeMkK9GuIA%3D%3D}{\custombold{[link]}} \\
-Statistical Learning Theory: Notes and R programming examples. \href{https://drive.google.com/file/d/0B8NUUh-M5neoeG1NUzBsWFZkeTQ/view?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BtTn34xJBSvmObeMkK9GuIA%3D%3D}{\custombold{[link]}}
+Statistical Learning Theory: Notes and R programming examples. \href{https://drive.google.com/open?id=1pQ5OofM7zZL7mLXVQi09tck3vUZwb9nD}{\custombold{[link]}}
 
 %\subsection{Trinity College London}
 %Grade 6 theory of music with merit \\
@@ -201,7 +201,7 @@ Statistical Learning Theory: Notes and R programming examples. \href{https://dri
 \location{Jan 2017 – Mar 2017 | Activities: }
 %\vspace{\topsep}
 \begin{tightemize}
-\item My project involved developing an approach to learn profile attribute embeddings using neural networks. \href{http://praelexis.com/2017/05/03/1236/}{\custombold{[link]}}
+\item My project involved developing an approach to learn profile attribute embeddings using neural networks. \href{http://praelexis.com/attribute-embedding-using-neural-networks/}{\custombold{[link]}}
 \end{tightemize}
 \sectionsep
 
@@ -261,9 +261,9 @@ Statistical Learning Theory: Notes and R programming examples. \href{https://dri
 
 \runsubsection{Theses}
 \descript{}
-\begin{tightemize}
-\item Boosting: a statistical procedure for exploiting the wisdom of crowds.
-\item Advances in Random Forests with Application to Classification \href{http://ir.nrf.ac.za/bitstream/handle/10907/912/pretorius_advances_2016.pdf?sequence=1}{\custombold{[link]}}.
+\begin{tightemize} 
+\item Boosting: exploiting the wisdom of crowds \href{https://drive.google.com/file/d/0B8NUUh-M5neobnJ4STR5Z09VTW8/view?usp=sharing}{\custombold{[link]}}.
+\item Advances in Random Forests with Application to Classification \href{https://drive.google.com/file/d/1cpVDxKqjpdR_6IbzviLw-PZh6HkVZwpn/view?usp=sharing}{\custombold{[link]}}.
 \end{tightemize}
 \sectionsep
 
