--- a/assets/cv/cv.tex
+++ b/assets/cv/cv.tex
@@ -147,7 +147,7 @@ Scalable Machine Learning
 \normalsize
 \section{Projects}
 \sectionsep
- South African crime data visualisation and analysis web app. \href{https://arnupretorius.shinyapps.io/SACrimeDataAnalyserWebApp/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BtTn34xJBSvmObeMkK9GuIA%3D%3D}{\custombold{[link]}} \\
+South African crime data visualisation and analysis web app. \href{https://arnupretorius.shinyapps.io/SACrimeDataAnalyserWebApp/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BtTn34xJBSvmObeMkK9GuIA%3D%3D}{\custombold{[link]}} \\
 Statistical Learning Theory: Notes and R programming examples. \href{https://drive.google.com/open?id=1pQ5OofM7zZL7mLXVQi09tck3vUZwb9nD}{\custombold{[link]}}
 
 %\subsection{Trinity College London}
@@ -243,7 +243,7 @@ Statistical Learning Theory: Notes and R programming examples. \href{https://dri
 %\location{Jan 2014 – Present | Ithaca, NY}
 %Worked with \textbf{\href{http://www.cs.cornell.edu/~ashesh/}{Ashesh Jain}} and \textbf{\href{http://www.cs.cornell.edu/~asaxena/}{Prof Ashutosh Saxena}} to create \textbf{PlanIt}, a tool which  learns from large scale user preference feedback to plan robot trajectories in human environments.  Publication submitted.
 \begin{tightemize}
-\item Pretorius, Van Biljon, Kroon, Kamper. \customitalics{Critical Initialisation and Deep Signal Propagation for Noisy Rectifier Neural Networks}. To appear in the 32nd Conference on Neural Information Processing Systems (NIPS), 2018.
+\item Pretorius, Van Biljon, Kroon, Kamper. \customitalics{Critical Initialisation and Deep Signal Propagation for Noisy Rectifier Neural Networks}. In Neural Information Processing Systems (NeurIPS), 2018. \href{https://arxiv.org/pdf/1811.00293.pdf}{\custombold{[link]}}
 \item Pretorius, Kroon, Kamper. \customitalics{Learning Dynamics of Linear Denoising Autoencoders}. In Proceedings of the 35th International Conference on Machine Learning (ICML), 2018. \href{https://arxiv.org/pdf/1806.05413.pdf}{\custombold{[link]}}
 \item Pretorius, Bierman, Steel. \customitalics{A Meta-Analysis of Research in Random Forests for Classification}. In the Proceedings of the Annual Conference of the Pattern Recognition Association of South Africa (PRASA), 2016. \href{http://ieeexplore.ieee.org/abstract/document/7813171/?reload=true&lipi=urn:li:page:d_flagship3_profile_view_base;I751iNLxTn%2BqB3Q6oh5vBQ%3D%3D}{\custombold{[link]}}
 \item Pretorius, Bierman, Steel. \customitalics{A Bias-Variance Analysis of Ensemble Learning for Classification}. In the Proceedings of the Annual Conference of the South African Statistical Association (SASA), 2016. \href{https://journals.co.za/content/sasj_proc/2016/con-1/EJC198852?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BI751iNLxTn%2BqB3Q6oh5vBQ%3D%3D#abstract_content}{\custombold{[link]}}
